# HPOES-Kinect-client

./: .gitignore  README.md  kinecthandler.cpp  mainwindow.cpp  segmentation.h  serverclient.cpp
blender_module/: README.md  blender_visualize.py
caffe_module/: README.md  caffe_predict.py
dummy_server/: README.md  main.py
qt_client/: README.md  kinectClient.pro  kinecthandler.cpp  kinecthandler.h  mainwindow.h  segmentation.cpp
qt_client/segmentation/: CMakeLists.txt  main.cpp  segmentation.cpp
qt_kinect_module/: README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serverclient.cpp  serverclient.h
qt_kinect_module/segmentation/: README.md  segmentation.h
